Added font to description

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -17,7 +17,7 @@
         z-index: 0;
         opacity: 0.3;
     }
-    h1, input::-webkit-input-placeholder, button, p, label {
+    h1, input::-webkit-input-placeholder, button, p, label, #description {
         font-family: 'roboto', sans-serif;
         -webkit-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
