--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -362,6 +362,7 @@
             } else if (window.getSelection) {
                 var range = document.createRange();
                 range.selectNode(document.getElementById(containerId));
+                window.getSelection().removeAllRanges();
                 window.getSelection().addRange(range);
             }
         }
