--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -4,7 +4,7 @@
     <title>Peer Piper</title>
     <link rel="icon" href="/static/peerpiper_small.png">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webtorrent/0.98.0/webtorrent.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcGdcznOfOFRb3AynAihb8DBS99ky3dWI&callback=initMap" async defer></script>
     <style type="text/css">
